Handle persistance of engine state. \Add unit test for reloading process from storage\n refactor the code to add taskDefinitionKey